finished Favorites, fixed layout bug, moved images

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/CSS/ReportManager.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/CSS/ReportManager.css
@@ -173,19 +173,19 @@ section#mainSection {
 }
 
 .fr-image-addFav {
-  background-image:url('../reportviewer/Images/Toolbar/burst_icon.png');
+  background-image:url('../Images/ReportManager/sq_plus_icon.png');
 }
 
 .fr-image-delFav {
-  background-image:url('../reportviewer/Images/Toolbar/align_just_icon.png');
+  background-image:url('../Images/ReportManager/sq_minus_icon.png');
 }
 
 .fr-image-fav {
-  background-image:url('../reportviewer/Images/Toolbar/burst_icon.png');
+  background-image:url('../Images/ReportManager/star_fav_icon.png');
 }
 
 .fr-image-recent {
-  background-image:url('../reportviewer/Images/Toolbar/burst_icon.png');
+  background-image:url('../Images/ReportManager/clock_icon.png');
 }
 
 
